fixed alignments

--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@
 	}
 
   a.monka {
-    background-image: url("monkaDab.jpeg");
-    background-size: auto;
+    background-image: url("pepeDab.jpg");
+    background-size: 125%;
     background-repeat: no-repeat;
     background-position: center;
     color: rgba(0,255,0,1);
@@ -130,16 +130,5 @@
 		-o-text-shadow: 0 1px 1px rgba(0,0,0,.5);
 		text-shadow: 0 1px 1px rgba(0,0,0,.5);	
 	}
-
-	.green span {
-		background: rgba(0,63,71,.7);		
-	}
-
-	.red span {
-		background: rgba(133,32,28,.7);		
-	}
-
-	.yellow span {
-		background: rgba(161,145,0,.7);	
 
 	}
